; ModuleID = '/home/carl/AnghaBench/redis/src/extr_multi.c_watchForKey.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_multi.c_watchForKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32*, %struct.TYPE_8__*, i32* }
%struct.TYPE_8__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @watchForKey(%struct.TYPE_9__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = call i32 @listRewind(i32* %11, i32* %6)
  br label %13

13:                                               ; preds = %34, %2
  %14 = call i32* @listNext(i32* %6)
  store i32* %14, i32** %7, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %35

16:                                               ; preds = %13
  %17 = load i32*, i32** %7, align 8
  %18 = call %struct.TYPE_9__* @listNodeValue(i32* %17)
  store %struct.TYPE_9__* %18, %struct.TYPE_9__** %8, align 8
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %19, i32 0, i32 1
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %20, align 8
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 1
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %23, align 8
  %25 = icmp eq %struct.TYPE_8__* %21, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %16
  %27 = load i32*, i32** %4, align 8
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 2
  %30 = load i32*, i32** %29, align 8
  %31 = call i64 @equalStringObjects(i32* %27, i32* %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %26
  br label %77

34:                                               ; preds = %26, %16
  br label %13

35:                                               ; preds = %13
  %36 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_8__*, %struct.TYPE_8__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = load i32*, i32** %4, align 8
  %42 = call i32* @dictFetchValue(i32 %40, i32* %41)
  store i32* %42, i32** %5, align 8
  %43 = load i32*, i32** %5, align 8
  %44 = icmp ne i32* %43, null
  br i1 %44, label %57, label %45

45:                                               ; preds = %35
  %46 = call i32* (...) @listCreate()
  store i32* %46, i32** %5, align 8
  %47 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %48 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %47, i32 0, i32 1
  %49 = load %struct.TYPE_8__*, %struct.TYPE_8__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32*, i32** %4, align 8
  %53 = load i32*, i32** %5, align 8
  %54 = call i32 @dictAdd(i32 %51, i32* %52, i32* %53)
  %55 = load i32*, i32** %4, align 8
  %56 = call i32 @incrRefCount(i32* %55)
  br label %57

57:                                               ; preds = %45, %35
  %58 = load i32*, i32** %5, align 8
  %59 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %60 = call i32 @listAddNodeTail(i32* %58, %struct.TYPE_9__* %59)
  %61 = call %struct.TYPE_9__* @zmalloc(i32 24)
  store %struct.TYPE_9__* %61, %struct.TYPE_9__** %8, align 8
  %62 = load i32*, i32** %4, align 8
  %63 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %64 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %63, i32 0, i32 2
  store i32* %62, i32** %64, align 8
  %65 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %66 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %65, i32 0, i32 1
  %67 = load %struct.TYPE_8__*, %struct.TYPE_8__** %66, align 8
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %69 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %68, i32 0, i32 1
  store %struct.TYPE_8__* %67, %struct.TYPE_8__** %69, align 8
  %70 = load i32*, i32** %4, align 8
  %71 = call i32 @incrRefCount(i32* %70)
  %72 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %73 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %72, i32 0, i32 0
  %74 = load i32*, i32** %73, align 8
  %75 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  %76 = call i32 @listAddNodeTail(i32* %74, %struct.TYPE_9__* %75)
  br label %77

77:                                               ; preds = %57, %33
  ret void
}

declare dso_local i32 @listRewind(i32*, i32*) #1

declare dso_local i32* @listNext(i32*) #1

declare dso_local %struct.TYPE_9__* @listNodeValue(i32*) #1

declare dso_local i64 @equalStringObjects(i32*, i32*) #1

declare dso_local i32* @dictFetchValue(i32, i32*) #1

declare dso_local i32* @listCreate(...) #1

declare dso_local i32 @dictAdd(i32, i32*, i32*) #1

declare dso_local i32 @incrRefCount(i32*) #1

declare dso_local i32 @listAddNodeTail(i32*, %struct.TYPE_9__*) #1

declare dso_local %struct.TYPE_9__* @zmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
